--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         </li>
 
                         <li class="nav-item ms-3">
-                            <a class="nav-link custom-btn custom-border-btn custom-btn-bg-white btn" href="login.html">Login Admin</a>
+                            <a class="nav-link custom-btn custom-border-btn custom-btn-bg-white btn" href="login.php">Login Admin</a>
                         </li>
                     </ul>
                 </div>
