--- a/struktur.html
+++ b/struktur.html
@@ -95,23 +95,21 @@
             </div>
         </nav>
 
-        <main>
-
-            <section class="banner-section d-flex justify-content-center align-items-end">
+        <section class="banner-section d-flex justify-content-center align-items-end">
                 <div class="section-overlay"></div>
 
                 <div class="container">
                     <div class="row">
 
                         <div class="col-lg-7 col-12">
-                            <h1 class="text-white mb-lg-0">Struktur Organisasi</h1>
+                            <h1 class="text-white mb-lg-0">Tujuan dan Fungsi</h1>
                         </div>
 
                         <div class="col-lg-4 col-12 d-flex justify-content-lg-end align-items-center ms-auto">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb justify-content-center">
                                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                                    <li class="breadcrumb-item active" aria-current="page">Struktur Organisasi</li>
+                                    <li class="breadcrumb-item active" aria-current="page">Tujuan dan Fungsi</li>
                                 </ol>
                             </nav>
                         </div>
@@ -120,92 +118,19 @@
                 </div>
             </section>
 
+        <main>
+
             <section class="section-padding bg-light">
                 <div class="container text-center">
                     <h2 class="mb-5 fw-bold text-primary">STRUKTUR ORGANISASI</h2>
                     <h4 class="text-dark mb-4">Perpustakaan Politeknik STMI Jakarta</h4>
 
-                    <div class="org-chart-vertical">
-                    <!-- Level 1 -->
-                    <div class="person">
-                        <img src="images/so/direktur.JPG" alt="Direktur">
-                        <div class="info">
-                        <h5>Amrin, ST, MT</h5>
-                        <p>Direktur</p>
-                        </div>
-                    </div>
-
-                    <!-- Level 2 -->
-                    <div class="person">
-                        <img src="images/so/pembantudirektur1.JPG" alt="Pembantu Direktur">
-                        <div class="info">
-                        <h5>Fitria Ika Aryanti, S.T., M.Eng</h5>
-                        <p>Pembantu Direktur I</p>
-                        </div>
-                    </div>
-
-                    <!-- Level 3 -->
-                    <div class="person">
-                        <img src="images/so/kepalaunit.JPG" alt="Kepala Unit">
-                        <div class="info">
-                        <h5>Fifi Lailasari Hadianastuti, S.Kom, M.Kes</h5>
-                        <p>Kepala Unit Perpustakaan</p>
-                        </div>
-                    </div>
-
-                    <!-- Level 4 (Staff) -->
-                    <div class="staff-group">
-                        <div class="person">
-                        <img src="images/so/pustakawan.JPG" alt="Sekretaris">
-                        <div class="info">
-                            <h5>Nur Halimah, S.IP</h5>
-                            <p>Sekretaris / Pustakawan</p>
-                        </div>
-                        </div>
-
-                        <div class="person">
-                        <img src="images/so/pelayanan.JPG" alt="Petugas">
-                        <div class="info">
-                            <h5>Muhajir</h5>
-                            <p>Petugas Pelayanan</p>
-                        </div>
-                        </div>
-
-                        <div class="person">
-                        <img src="images/so/pengolahan.JPG" alt="Petugas Pengolahan">
-                        <div class="info">
-                            <h5>Mariati Br Bangun, A.Md</h5>
-                            <p>Petugas Pengolahan</p>
-                        </div>
-                        </div>
-
-                        <div class="person">
-                        <img src="images/so/repository1.JPG" alt="Petugas Repository">
-                        <div class="info">
-                            <h5>Whisnu Dwi Prasetiyo, S.Tr.AB</h5>
-                            <p>Petugas Repository</p>
-                        </div>
-                        </div>
-
-                        <div class="person">
-                        <img src="images/so/repository2.JPG" alt="Petugas Repository">
-                        <div class="info">
-                            <h5>Ari Febrian, M.Pd</h5>
-                            <p>Petugas Repository</p>
-                        </div>
-                        </div>
-
-                        <div class="person">
-                        <img src="images/so/pelayanan2.JPG" alt="Petugas Pelayanan">
-                        <div class="info">
-                            <h5>Fajar Setyaning Dwi Putra, M.Pd</h5>
-                            <p>Petugas Pelayanan</p>
-                        </div>
-                        </div>
-                    </div>
+                    <div class="org-chart-wrapper">
+                        <img src="images/so/so.png" alt="Struktur Organisasi" class="img-fluid org-chart-img">
                     </div>
                 </div>
             </section>
+
         </main>
 
 
